# lthdt-18clc4-group07

./: .gitignore  BaoCao-1-18127210-18127182-xxxxxxxx.docx  README.txt
PA1(selling app)/ProjectSellingApp/: CMakeCache.txt  CMakeLists.txt  Makefile  Output  ProjectSellingApp.sln  cmake_install.cmake
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/: Main.cpp  Makefile  Output  ProjectSellingApp.vcxproj  ProjectSellingApp.vcxproj.filters  Util.cpp  Util.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Account/: Account.cpp  Account.h  CustomerAccount.cpp  CustomerAccount.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Account/Bucket/: Bucket.cpp  Bucket.cpp.bak  Bucket.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Account/Data/: CustomerAccount.data  CustomerAccount.txt  ManagerAccount.txt  SellerAccount.txt
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/BookStore/: BookStore.cpp  BookStore.h  bookstore.txt
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Bucket/: BookStore.cpp  BookStore.h  Bucket.cpp  Bucket.h  DateDiscount.txt
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/MainMenu/: MainMenu.cpp  MainMenu.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Menu/: MainMenu.cpp  MainMenu.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Person/: Customer.cpp  Customer.h  Customer.hpp  Manager.cpp  Manager.h  Person.cpp  Person.h  PersonInterface.cpp  PersonInterface.h  Seller.cpp  Seller.h
PA1(selling app)/ProjectSellingApp/ProjectSellingApp/Utility/: FileHandler.h  Util.cpp  Util.h
(+31 files in other folders)
